--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             </h1>
             <div class="section-7-main-input">
               <form class="form">
-                <input class="input" type="text" placeholder="Enter your message" required autofocus>
+                <input class="input" type="text" placeholder="Enter your message" autofocus>
                 <button type="text" class="button">Send</button>
               </form>
             </div>
